feat: Refresh API method
